--- a/SwiftUITraining/Info.plist
+++ b/SwiftUITraining/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Use biometrics to login</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FancyCutCondProB7-Bold.otf</string>
